Csr conversion